--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="shortcut icon" type="image/x-icon" href="/public/assets/images/favicon.ico">
-        <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Sans+JP" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Sans+JP">
         <link rel="stylesheet" type="text/css" href="/public/assets/styles/style.css">
         <title>{{.Title}}</title>
     </head>
