--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -1,19 +1,85 @@
 body {
-    font-family: 'Noto Sans', sans-serif;
-    background-color: #76E1FE;
-    color: #1A51A5;
+    font-family: 'Work Sans', sans-serif;
+    margin: auto 0;
+    color: #FFF;
 }
 
 .hidden {
     display: none;
 }
 
+.hero {
+    background: url('/public/assets/images/background.jpg') no-repeat;
+    background-size: 100% 100%;
+    width: 100%;
+    height: 42rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .salutation {
     font-size: 4rem;
-    text-align: center;
+    margin: 0 auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    width: fit-content;
+}
+
+.salutation--bg {
+    font-size: 4rem;
+    margin: 0 auto;
+    width: fit-content;
+    background-color: rgba(0, 0, 0, 0.35);
+    padding: 1rem;
+}
+
+.salutation--subtitle {
+    margin: 0 auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    width: fit-content;
+    font-weight: bold;
 }
 
 .salutation__message {
-    font-family: 'Noto Sans JP', sans-serif;
     font-weight: bold;
+}
+
+.navigation {
+    box-shadow: 0 0.05rem 1rem rgba(0, 0, 0, 0.15);
+    width: 100%;
+}
+
+.navigation__items {
+    list-style-type: none;
+    margin: auto 0;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    position: relative;
+    right: 1rem;
+    color: rgba(0, 0, 0, 0.76);
+    font-weight: bolder;
+    text-transform: uppercase;
+}
+
+.navigation__item {
+    margin-left: 3rem;
+    letter-spacing: 0.3rem;
+    font-weight: 400;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    max-width: 100%;
+    height: auto;
+    width: 2rem;
+    position: absolute;
+    left: 1rem;
 }
